Package_Tools/include-C/gmp/gmp.h

typedef unsigned int		mp_limb_t;
typedef int			mp_limb_signed_t;
typedef unsigned long long int	mp_limb_t;
typedef long long int		mp_limb_signed_t;
typedef unsigned long int	mp_limb_t;
typedef long int		mp_limb_signed_t;
typedef unsigned long int	mp_bitcnt_t;
typedef mp_limb_t *		mp_ptr;
typedef const mp_limb_t *	mp_srcptr;
typedef int			mp_size_t;
typedef long int		mp_size_t;
/************ Low level positive-integer (i.e. N) routines.  ************/

/* This is ugly, but we need to make user calls reach the prefixed function. */

extern mp_limb_t mpn_add (mp_ptr, mp_srcptr, mp_size_t, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_add_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t) ;
extern mp_limb_t mpn_add_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_addmul_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t);
extern int mpn_cmp (mp_srcptr, mp_srcptr, mp_size_t)  ;
extern int mpn_zero_p (mp_srcptr, mp_size_t)  ;
extern void mpn_divexact_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t);
extern mp_limb_t mpn_divexact_by3c (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t);
extern mp_limb_t mpn_divrem (mp_ptr, mp_size_t, mp_ptr, mp_size_t, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_divrem_1 (mp_ptr, mp_size_t, mp_srcptr, mp_size_t, mp_limb_t);
extern mp_limb_t mpn_divrem_2 (mp_ptr, mp_size_t, mp_ptr, mp_size_t, mp_srcptr);
extern mp_limb_t mpn_div_qr_1 (mp_ptr, mp_limb_t *, mp_srcptr, mp_size_t, mp_limb_t);
extern mp_limb_t mpn_div_qr_2 (mp_ptr, mp_ptr, mp_srcptr, mp_size_t, mp_srcptr);
extern mp_size_t mpn_gcd (mp_ptr, mp_ptr, mp_size_t, mp_ptr, mp_size_t);
extern mp_limb_t mpn_gcd_11 (mp_limb_t, mp_limb_t) ;
extern mp_limb_t mpn_gcd_1 (mp_srcptr, mp_size_t, mp_limb_t) ;
extern mp_limb_t mpn_gcdext_1 (mp_limb_signed_t *, mp_limb_signed_t *, mp_limb_t, mp_limb_t);
extern mp_size_t mpn_gcdext (mp_ptr, mp_ptr, mp_size_t *, mp_ptr, mp_size_t, mp_ptr, mp_size_t);
extern size_t mpn_get_str (unsigned char *, int, mp_ptr, mp_size_t);
extern mp_bitcnt_t mpn_hamdist (mp_srcptr, mp_srcptr, mp_size_t)  ;
extern mp_limb_t mpn_lshift (mp_ptr, mp_srcptr, mp_size_t, unsigned int);
extern mp_limb_t mpn_mod_1 (mp_srcptr, mp_size_t, mp_limb_t) ;
extern mp_limb_t mpn_mul (mp_ptr, mp_srcptr, mp_size_t, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_mul_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t);
extern void mpn_mul_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_sqr (mp_ptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_neg (mp_ptr, mp_srcptr, mp_size_t);
extern void mpn_com (mp_ptr, mp_srcptr, mp_size_t);
extern int mpn_perfect_square_p (mp_srcptr, mp_size_t) ;
extern int mpn_perfect_power_p (mp_srcptr, mp_size_t) ;
extern mp_bitcnt_t mpn_popcount (mp_srcptr, mp_size_t)  ;
extern mp_size_t mpn_pow_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t, mp_ptr);
extern mp_limb_t mpn_preinv_mod_1 (mp_srcptr, mp_size_t, mp_limb_t, mp_limb_t) ;
extern void mpn_random (mp_ptr, mp_size_t);
extern void mpn_random2 (mp_ptr, mp_size_t);
extern mp_limb_t mpn_rshift (mp_ptr, mp_srcptr, mp_size_t, unsigned int);
extern mp_bitcnt_t mpn_scan0 (mp_srcptr, mp_bitcnt_t) ;
extern mp_bitcnt_t mpn_scan1 (mp_srcptr, mp_bitcnt_t) ;
extern mp_size_t mpn_set_str (mp_ptr, const unsigned char *, size_t, int);
extern size_t mpn_sizeinbase (mp_srcptr, mp_size_t, int);
extern mp_size_t mpn_sqrtrem (mp_ptr, mp_ptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_sub (mp_ptr, mp_srcptr, mp_size_t, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_sub_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t) ;
extern mp_limb_t mpn_sub_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_submul_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t);
extern void mpn_tdiv_qr (mp_ptr, mp_ptr, mp_size_t, mp_srcptr, mp_size_t, mp_srcptr, mp_size_t);
extern void mpn_and_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_andn_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_nand_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_ior_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_iorn_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_nior_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_xor_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_xnor_n (mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern void mpn_copyi (mp_ptr, mp_srcptr, mp_size_t);
extern void mpn_copyd (mp_ptr, mp_srcptr, mp_size_t);
extern void mpn_zero (mp_ptr, mp_size_t);
extern mp_limb_t mpn_cnd_add_n (mp_limb_t, mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_cnd_sub_n (mp_limb_t, mp_ptr, mp_srcptr, mp_srcptr, mp_size_t);
extern mp_limb_t mpn_sec_add_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t, mp_ptr);
extern mp_size_t mpn_sec_add_1_itch (mp_size_t) ;
extern mp_limb_t mpn_sec_sub_1 (mp_ptr, mp_srcptr, mp_size_t, mp_limb_t, mp_ptr);
extern mp_size_t mpn_sec_sub_1_itch (mp_size_t) ;
extern void mpn_cnd_swap (mp_limb_t,  mp_limb_t *,  mp_limb_t *, mp_size_t);
extern void mpn_sec_mul (mp_ptr, mp_srcptr, mp_size_t, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_mul_itch (mp_size_t, mp_size_t) ;
extern void mpn_sec_sqr (mp_ptr, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_sqr_itch (mp_size_t) ;
extern void mpn_sec_powm (mp_ptr, mp_srcptr, mp_size_t, mp_srcptr, mp_bitcnt_t, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_powm_itch (mp_size_t, mp_bitcnt_t, mp_size_t) ;
extern void mpn_sec_tabselect ( mp_limb_t *,  const mp_limb_t *, mp_size_t, mp_size_t, mp_size_t);
extern mp_limb_t mpn_sec_div_qr (mp_ptr, mp_ptr, mp_size_t, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_div_qr_itch (mp_size_t, mp_size_t) ;
extern void mpn_sec_div_r (mp_ptr, mp_size_t, mp_srcptr, mp_size_t, mp_ptr);
extern mp_size_t mpn_sec_div_r_itch (mp_size_t, mp_size_t) ;
extern int mpn_sec_invert (mp_ptr, mp_ptr, mp_srcptr, mp_size_t, mp_bitcnt_t, mp_ptr);
extern mp_size_t mpn_sec_invert_itch (mp_size_t) ;